# life-organize

./: .dockerignore  .gitignore  .swiftlint.yml  BRAINDUMP.md  README.md
.aidlc/: config.json  planning_index.md
.github/: dependabot.yml
Backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 20260522_000001_initial_backend.py  20260530_000002_device_token_lifecycle.py
Backend/app/: admin_events.py  auth.py  config.py  db.py  models.py  schemas.py
Backend/app/middleware/: request_size.py  security_headers.py
Backend/app/routers/: admin.py  admin_logs_page.py  ai.py
Backend/app/services/: openai_gateway.py  openai_schema.py
Backend/infra/: Caddyfile  api-entrypoint.sh  api.Dockerfile  docker-compose.yml
Backend/infra/scripts/: docker_smoke.sh  update_caddy_site_block.py
Backend/tests/: conftest.py  test_admin_routes.py  test_ai_routes.py  test_app_entrypoint.py  test_auth.py  test_auth_config.py  test_backend_contracts.py  test_backend_test_harness.py  test_database_migrations.py  test_deployment_contracts.py  test_openai_gateway.py  test_rate_limit_contract.py  test_route_auth_rate_limit.py
LifeOrganize/: AppRootView.swift  CompactRootShell.swift  LifeOrganize.entitlements  LifeOrganizeApp.swift  RegularSidebarSectionRow.swift
LifeOrganize.xcodeproj/: project.pbxproj
LifeOrganizeTests/: AIServiceClientTests.swift  AIServiceHTTPContractTests.swift  AbendHardeningTests.swift  AppRuntimeConfigurationAIServiceTests.swift  AppRuntimeConfigurationTests.swift  (+95 more)
docs/: backend.md  (+9 more)
(+297 files in other folders)
