[project]
name = "life-organize-backend"
version = "0.1.0"
description = "Small private AI gateway for LifeOrganize"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = [
    "--cov=app",
    "--cov=main",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "alembic/*",
    "alembic/versions/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904", "SIM102"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
